# mia-nlp2

./: .gitignore  README.md  pyproject.toml
TP1/: MIA_NLP2_TP1_TinyGPT-fix-preview.ipynb  MIA_NLP2_TP1_TinyGPT.ipynb  pyproject.toml
TP1/src/: attention.py  config.py  generation.py  mlp.py  tinygpt.py
TP2/: .env.example  README.md  app.py  ingest.py  pyproject.toml
TP2/src/: chatbot.py
TP3/: .env.example  README.md  app.py  ingest.py  pyproject.toml
TP3/src/: agent.py  lookup_helper.py
